--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #323544;
+    /* background-color: #323544; */
+    background-color: rgb(30, 32, 43);
     position: relative;
 }
 
@@ -9,7 +10,6 @@ nav{
     background-color: rgb(30, 32, 43);
     width: 100%;
     padding: 0 8rem!important;
-    /* height: 120px; */
 }
 
 .container{
@@ -38,24 +38,24 @@ font-size: 0.8rem;
 .nav{
     width: 85%;
 }
- .nav-item{
+.nav-item{
     padding: 0 1.5rem;
     margin:0 3px;
     border: 2px rgb(30, 32, 43) solid;
- }
+}
 
- .active{
+.active{
     border: 2px #1d1ca9 solid;
     transition: all 0.3s linear;
     border-radius: 15px;
     & a{
         color: #1d1ca9!important;;
     }
- }
- .nav-link{
+}
+.nav-link{
     color: #fff!important;
- }
- .nav-item:hover{
+}
+.nav-item:hover{
     border: 2px #1d1ca9 solid;
     transition: all 0.3s linear;
     border-radius: 15px;
@@ -73,7 +73,7 @@ a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 320px;
+    /* height: 320px; */
     position: relative;
 }
 
@@ -107,7 +107,8 @@ a:hover{
 .whetherContainer{
     background-color: rgb(30, 32, 43);
     height: 100%;
-    height: 320px;
+    width: fit-content;
+    /* height: 320px; */
 }
 
 .days{
@@ -116,10 +117,13 @@ a:hover{
     position: absolute;
     top: 50%;
     left: 8%;
-    height: 320px;
+    /* height: 320px; */
+    /* width: unset; */
 }
 .day{
     background-color: #323544;
+    /* width:fit-content; */
+    height: 400px;
     color: #fff;
 }
 
@@ -127,6 +131,20 @@ a:hover{
     background-color: #262936 ;
     
 }
+
+/* @media screen and (min-width: 480px) {
+    .day{
+        width: unset;
+        height: 350px;
+        float: left;
+    }
+    main{
+        width: unset;
+    }
+    .containImg{
+        width: 100%;
+    }
+} */
 
 .temp{
     width: 85%;
@@ -183,9 +201,10 @@ a:hover{
 }
 
 body footer{
-    width: 80%;
-    margin-top: 11rem!important;
-    margin: auto;
+    /* width: 80%; */
+    /* margin-top: 11rem!important; */
+    /* margin: auto;
+    background-color: #323544; */
 }
 .foot-one{
     color: #fff;
@@ -195,7 +214,26 @@ body footer{
     width: 100%;
 }
 
-.container-footer{
+/* .container-footer{
     margin-top: 5rem;
     width: 85%;
+} */
+
+@media screen and (max-width:844px){
+    .day{
+        /* width: 500px; */
+        height: 400px;
+    }
+    .days{
+        width: 100%;
+        margin: auto!important;
+        position: absolute;
+        top: 50%;
+        left: 1%;
+    }
+    .icons-container i {
+        color:#8e8f94;
+        margin-right: 1px;
+        font-size: 1.2rem;
+    }
 }
